<resources>
    <string name="app_name">Musix</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favorites_btn">Favorites</string>
    <string name="playlists_btn">Playlists</string>
    <string name="total_songs">Total Songs: 0</string>
    <string name="world_of_music">World Of Music</string>
    <string name="back_btn">Go back</string>
    <string name="favorite_empty_btn">Favorite icon</string>
    <string name="song_name">Song Name</string>
    <string name="song_album">Song Album</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading…</string>
    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="add_btn">Add</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">App Icon</string>
    <string name="text_nav">Welcome to\nThe World Of Music</string>
    <string name="previous_btn">Previous</string>
    <string name="pause_or_play_btn">Pause or Play</string>
    <string name="next_btn">Next</string>
    <string name="feedback_btn">Feedback</string>
    <string name="settings_btn">Settings</string>
    <string name="about_btn">About</string>
    <string name="exit_btn">Exit</string>
    <string name="min_15">15 minutes</string>
    <string name="min_30">30 minutes</string>
    <string name="min_60">60 minutes</string>
    <string name="search_view">Search View</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_btn">Delete</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="user_name">Your Name</string>
    <string name="add_song_to_playlist">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="created_at">Created At</string>
    <string name="search_songs">Search Songs</string>
    <string name="about_text">
        This is a music player app developed by Aaliyah Junaid.
        It contains several functionalities and features such as creating and deleting playlists,
        add song to favorites, Share song file, Equalizer, Shuffle songs, Change UI skins,
        Increase/Decrease audio volume etc.\n\nDeveloped By: Aaliyah E. Junaid
    </string>
    <string name="set_theme">Set theme</string>
    <string name="sort_by">Sort Songs By</string>
    <string name="version_name">Version Name</string>
    <string name="sort_type">Sort Type</string>
    <string name="ascending_radio_btn">Ascending</string>
    <string name="descending_radio_btn">Descending</string>
    <string name="volume">Volume</string>
</resources>