<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?attr/themeColor"
    tools:context=".NowPlaying"
    android:padding="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImageNP"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:src="@drawable/music_player_icon"
        app:shapeAppearanceOverlay="@style/curved"
        tools:ignore="ImageContrastCheck" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/nextBtnNP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        app:icon="@drawable/next_icon"
        app:iconTint="@color/white"
        android:backgroundTint="?attr/themeColor"
        android:layout_centerVertical="true"
        android:contentDescription="@string/next_btn"
        app:iconSize="40dp"
        android:layout_marginEnd="10dp"
        tools:ignore="RelativeOverlap" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/playPauseBtnNP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/play_icon"
        app:iconTint="@color/white"
        android:backgroundTint="?attr/themeColor"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="5dp"
        android:contentDescription="@string/pause_or_play_btn"
        app:iconSize="40dp"
        tools:ignore="RelativeOverlap"
        android:layout_toStartOf="@id/nextBtnNP"/>

    <TextView
        android:id="@+id/songNameNP"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:text="@string/song_name"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_toStartOf="@id/playPauseBtnNP"
        android:layout_toEndOf="@+id/songImageNP"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"/>

</RelativeLayout>