<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/set_theme"
        android:background="@color/white"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="2dp"
        android:padding="5dp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolBlueTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/cool_blue"
            android:contentDescription="@string/set_theme"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolPinkTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/cool_pink"
            android:contentDescription="@string/set_theme"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/coolGreenTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/set_theme"
            android:src="@drawable/circle_icon"
            android:tint="@color/cool_green"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/blueTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/set_theme"
            android:src="@drawable/circle_icon"
            android:tint="@color/blue"
            tools:ignore="ImageContrastCheck" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/purpleTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/purple_500"
            android:contentDescription="@string/set_theme"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/blackTheme"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/circle_icon"
            android:tint="@color/black"
            android:contentDescription="@string/set_theme"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        android:layout_marginVertical="1dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sort_by"
            android:background="@color/white"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            android:paddingStart="5dp"
            android:gravity="center|start"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sortBtn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/sort_by"
            android:src="@drawable/sort_icon"
            android:tint="@color/cool_blue"
            android:padding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        android:layout_marginVertical="1dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sort_type"
            android:background="@color/white"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            android:paddingStart="5dp"
            android:gravity="center|start"
            tools:ignore="RtlSymmetry" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:checkedButton="@+id/radio_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/ascRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ascending_radio_btn"/>
            <RadioButton
                android:id="@+id/descRadioBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="15dp"
                android:text="@string/descending_radio_btn"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingHorizontal="16dp"
        android:layout_marginVertical="1dp">

        <TextView
            android:id="@+id/volumeLabel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/volume"
            android:background="@color/white"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:layout_marginTop="2dp"
            android:paddingStart="5dp"
            android:gravity="center|start"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/volumeSeekbar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/versionName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/version_name"
        android:background="@color/white"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:padding="16dp"/>

</LinearLayout>