<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="115dp"
    android:layout_height="115dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/playlistView"
    android:layout_marginBottom="8dp"
    android:paddingEnd="3dp"
    android:paddingStart="3dp"
    app:cardCornerRadius="7dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/themeColor"
            android:gravity="center"
            android:alpha="0.7">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/playlists_btn"
                android:src="@drawable/playlist_view_icon"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/deleteBtnPV"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/delete_btn"
            android:src="@drawable/delete_icon"
            android:backgroundTint="@color/transparent"
            android:tint="@android:color/holo_red_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/songNamePV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:background="?attr/themeColor"
            android:padding="3dp"
            android:text="@string/playlist_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            tools:ignore="SmallSpTextContrastCheck"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>